--- a/src/components/content/panel.scss
+++ b/src/components/content/panel.scss
@@ -6,11 +6,21 @@
   width: 100%;
   z-index: 1000;
 
-  h2 {
+  .participants-header {
     margin: 0;
     padding: 10px;
     background: #646cff;
     color: #fff;
+    display: flex;
+    justify-content: space-between;
+    h2 {
+      margin-bottom: 0;
+    }
+    span {
+      font-size: 1.5em;
+      cursor: pointer;
+      transform: rotate(90deg);
+    }  
   }
 
   ul {
@@ -28,16 +38,29 @@
         font-size: 12px;
         color: #333;
       }
-      span:first-child {
-        font-size: 16px;
+      span.circle {
+        font-size: 2em;
         display: block;
-        padding: 10px;
-        border: 1px solid #ccc;
         border-radius: 25px;
         width: 50px;
         height: 50px;
         background-color: #ccc;
+        position: relative;
+        transition: transform 1s ease;
+      }
+      span.circle.spin {
+        transform: rotate(360deg);
       }
     }
   }
+}
+
+.participants-icon {
+  position: fixed;
+  bottom: 10%;
+  cursor: pointer;
+  border-radius: 10px;
+  border:2px dashed #ccc;
+  background: #fff;
+  padding: 2px;
 }
