--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -5,43 +5,11 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
 #sp-panel-root {
+  fieldset {
+    min-height: 160px;
+  }
+
   section {
     padding-bottom: 5px;
   }
@@ -59,5 +27,64 @@
     color: white;
     border: none;
     cursor: pointer;
+  }
+
+  .link-section-next {
+    display: flex;
+    justify-content: right;
+    margin-top: 10px;
+  }
+
+  .connected {
+    strong {
+      color: green;
+    }
+  }
+
+  .more-btn {
+    button {
+      position: relative;
+      span {
+        transform: rotate(180deg);
+        position: absolute;
+        right: 10px;
+        font-size: 20px;
+        top: 3px;
+      }
+    }
+
+    &.show {
+      button {
+        span {
+        }
+        border-bottom: 0;
+        margin-bottom: 0;
+        border-radius: 4px 4px 0 0;
+      }
+      ul {
+        display: block;
+      }
+    }
+
+    ul {
+      display: none;
+      list-style: none;
+      margin: 0;
+      border: 1px solid #ccc;
+      padding: 0;
+      position: absolute;
+      width: 79%;
+
+      li {
+        padding: 2px;
+        border-bottom: 1px solid #ccc;
+        cursor: pointer;
+
+        &:hover {
+          background-color: #f0f0f0;
+          color: #646cff;
+        }
+      }
+    }
   }
 }
