feat: setup environments and validations added

--- a/src/components/popup/popup.scss
+++ b/src/components/popup/popup.scss
@@ -12,6 +12,7 @@
 
   section {
     padding-bottom: 5px;
+    text-align: left;
   }
   input {
     width: 100%;
@@ -33,6 +34,10 @@
     display: flex;
     justify-content: right;
     margin-top: 10px;
+  }
+
+  small.error {
+    color: red;
   }
 
   .connected {
